--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -33,6 +33,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -67,3 +68,31 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+ /* solution */
+
+ .modal {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+ }
+
+ .icon {
+  margin-right: 20px;
+ }
+
+ .header {
+  font-weight: bold;
+  font-size: 1.5rem;
+ }
+
+ .headerDiv {
+  display: flex;
+  justify-content: space-between;
+ }
+
+ .right {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+ }
